[ios] Followup to NTP contentInset.bottom changes.

Bug: 837248
Cq-Include-Trybots: master.tryserver.chromium.mac:ios-simulator-cronet;master.tryserver.chromium.mac:ios-simulator-full-configs
Change-Id: If01a46f95b979a5069895e6135adc4203216817b
Reviewed-on: https://chromium-review.googlesource.com/1030060
Commit-Queue: Justin Cohen <justincohen@chromium.org>
Reviewed-by: Rohit Rao <rohitrao@chromium.org>
Cr-Commit-Position: refs/heads/master@{#554042}
Former-commit-id: 1565765370b4193f2ab829de00e893e505a44fcc