ios/chrome/browser/ui/content_suggestions/ntp_home_mediator.mm
@@ -201,7 +201,8 @@ const char kRateThisAppCommand[] = "ratethisapp";
     // offset, taking into account the size of the toolbar.
     offset = MAX(0, MIN(offset, collection.contentSize.height -
                                     collection.bounds.size.height -
-                                    ntp_header::ToolbarHeight()));
+                                    ntp_header::ToolbarHeight() +
+                                    collection.contentInset.bottom));
     collection.contentOffset = CGPointMake(0, offset);
     // Update the constraints in case the omnibox needs to be moved.
     [self.suggestionsViewController updateConstraints];
