ios/chrome/browser/ui/ntp/new_tab_page_controller.mm
@@ -206,8 +206,15 @@ using base::UserMetricsAction;
 }
 
 - (void)setContentInset:(UIEdgeInsets)contentInset {
+  // UIKit will adjust the contentOffset sometimes when changing the
+  // contentInset.bottom.  We don't want the NTP to scroll, so store and re-set
+  // the contentOffset after setting the contentInset.
+  CGPoint contentOffset = self.contentSuggestionsCoordinator.viewController
+                              .collectionView.contentOffset;
   self.contentSuggestionsCoordinator.viewController.collectionView
       .contentInset = contentInset;
+  self.contentSuggestionsCoordinator.viewController.collectionView
+      .contentOffset = contentOffset;
 }
 
 #pragma mark - CRWNativeContent
